Try GPIO connection with address offset (#4748)
* add pat_input_reader to abstract pin connection retry

* improve pin logging

* Apply suggestions from code review

Co-authored-by: Brian Donovan <1938+eventualbuddha@users.noreply.github.com>

* use assert! where possible

* Add a vulnerability disclosure policy. (#4758)

Add a vulnerability disclosure policy.

Co-authored-by: arsalansufi <arsalan@voting.works>

* VxMarkScan - Save Diagnostics Report (#4735)

* fix bug where save readiness report modal doesn't reset after closing

* report component

* setup mark-scan backend for rendering docs

* readiness report backend

* frontend

* PDI scanner driver (#4727)

* feat(scan): add CLI for testing the PDI PageScan 5

* feat(pdi-rs): pass scanning errors back to `Scanner`

* WIP

* Fix builds

* Clean up pdi-rs and add README

* Fix missing StopMode

* pdi-tui: Actually close scanner connection when disconnecting

Without this change, if you disconnected, you couldn't reconnect (it
would just hang).

* pdi-tui: Make capital letter commands work

* pdictl: Add eject command

Also rename some types/functions to make them a bit clearer

* Set up TS linting

* Clean up TS demo lint issues and add eject command

* Remove changes from apps/scan/backend

They were only tiny baby steps, and I want to make rebasing easier.

* Rename pdi-rs to pdi-scanner

* Fix rebase issue: Swap toRgba to fromGrayScale

* Pass tests

* Cleanup/comments

* refactor(pdi-tui): flatten module structure to remove `ui` layer

* remove unhelpful comment

* fix(pdi-scanner): remove `StopMode` and don't clean up pending transfers

This seems to work fine without all the cleanup code, so just let it be simpler.

* feat(pdi-scanner): stop scanner on drop

This makes it so we no longer need to call `stop` explicitly.

* build(pdi-scanner): build Rust addon offline for trusted build

* build(rust): move dependencies to roo

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1322,6 +1322,24 @@ jobs:
           command: |
             cargo test -p daemon-utils
 
+  test-crate-patinputd:
+    executor: 'nodejs'
+    resource_class: xlarge
+    steps:
+      - checkout-and-install
+      - run:
+          name: Build
+          command: |
+            cargo build -p patinputd
+      - run:
+          name: Lint
+          command: |
+            cargo clippy -p patinputd
+      - run:
+          name: Test
+          command: |
+            cargo test -p patinputd
+
   test-crate-pdi-scanner:
     executor: 'nodejs'
     resource_class: xlarge
@@ -1449,6 +1467,7 @@ workflows:
       - test-crate-ballot-interpreter
       - test-crate-controllerd
       - test-crate-daemon-utils
+      - test-crate-patinputd
       - test-crate-pdi-scanner
       - test-crate-types-rs
       - test-crate-vx-logging
