--- a/libs/hmpb/render-backend/package.json
+++ b/libs/hmpb/render-backend/package.json
@@ -47,23 +47,19 @@
     "js-sha256": "^0.9.0",
     "path": "^0.12.7",
     "pdf-lib": "^1.17.1",
-    "pdfkit": "^0.13.0",
     "playwright": "^1.40.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.11",
-    "svg-to-pdfkit": "^0.1.8"
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@jest/types": "^29.6.1",
     "@types/debug": "4.1.8",
     "@types/jest": "^29.5.3",
     "@types/node": "16.18.23",
-    "@types/pdfkit": "^0.12.9",
     "@types/react": "18.2.18",
     "@types/react-dom": "^18.2.7",
     "@types/styled-components": "^5.1.26",
-    "@types/svg-to-pdfkit": "^0.1.0",
     "@types/tmp": "0.2.4",
     "@votingworks/fs": "workspace:*",
     "@votingworks/image-utils": "workspace:*",
