--- a/apps/design/frontend/package.json
+++ b/apps/design/frontend/package.json
@@ -76,7 +76,6 @@
     "@votingworks/utils": "workspace:*",
     "buffer": "^6.0.3",
     "debug": "4.3.4",
-    "dompurify": "^2.0.12",
     "dotenv": "16.3.1",
     "dotenv-expand": "9.0.0",
     "esbuild": "0.21.2",
@@ -90,6 +89,7 @@
     "react-flip-toolkit": "^7.1.0",
     "react-pdf": "7.7.0",
     "react-router-dom": "^5.3.4",
+    "sanitize-html": "^2.13.0",
     "styled-components": "^5.3.11",
     "util": "^0.12.4"
   },
@@ -98,12 +98,12 @@
     "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^13.5.0",
     "@types/debug": "4.1.8",
-    "@types/dompurify": "^2.0.3",
     "@types/history": "4.7.11",
     "@types/jest": "^29.5.3",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/sanitize-html": "^2.13.0",
     "@types/styled-components": "^5.1.26",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@types/tmp": "0.2.4",
