--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "pnpm": {
     "overrides": {
+      "@babel/traverse": "7.23.2",
       "@types/eslint": "8.4.1",
       "graceful-fs": "^4.2.9",
       "nan": "^2.20.0",
